[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Enemies/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node"]
script = ExtResource( 1 )

[node name="JellybellySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="SnakeraySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="DifficultyTimer" type="Timer" parent="."]
one_shot = true
